crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__compound_commands__parse_nested_subshell.snap
---
source: cash-parser/src/parser/tests/compound_commands.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "( ( echo nested ) )",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(Arithmetic(ArithmeticCommand(
                expr: UnexpandedArithmeticExpr(
                  value: "echo nested",
                ),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
