crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__compound_commands__parse_subshell_multiple_commands.snap
---
source: cash-parser/src/parser/tests/compound_commands.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "( echo hello; echo world )",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(Subshell(SubshellCommand(
                list: CompoundList([
                  CompoundListItem(AndOrList(
                    first: Pipeline(
                      seq: [
                        Simple(SimpleCommand(
                          word_or_name: Some(Word(
                            value: "echo",
                            loc: "[location]",
                          )),
                          suffix: Some(CommandSuffix([
                            Word(Word(
                              value: "hello",
                              loc: "[location]",
                            )),
                          ])),
                        )),
                      ],
                    ),
                  ), Sequence),
                  CompoundListItem(AndOrList(
                    first: Pipeline(
                      seq: [
                        Simple(SimpleCommand(
                          word_or_name: Some(Word(
                            value: "echo",
                            loc: "[location]",
                          )),
                          suffix: Some(CommandSuffix([
                            Word(Word(
                              value: "world",
                              loc: "[location]",
                            )),
                          ])),
                        )),
                      ],
                    ),
                  ), Sequence),
                ]),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
